--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	</head>
 	<body>
-    <script src="packages/index.js"></script>
+		<link rel="stylesheet" href="index.css">
+    	<script src="packages/index.js"></script>
 	</body>
 </html>
